feature/DSTEW-678/update-validation-rules-on-area-of-law